# mitra

./: .gitignore  ARCHITECTURE.md  TODO.md  landing_page.html
backend/: README.md  check_founder_jobs.py  patch_jobs.py  pyproject.toml  railway.toml  seed_jobs.py  test_intro.py
backend/mitra_api/: __init__.py  config.py  inbound.py  jobs_catalog.py  main.py  scheduler.py
backend/mitra_api/agent/: __init__.py  conversation_state.py  memory.py  orchestrator.py  prompts.py  session_store.py
backend/mitra_api/cal_webhook/: routes.py
backend/mitra_api/candidate/: routes.py
backend/mitra_api/data/: jobs.json
backend/mitra_api/db/: engine.py  migrations.py  models.py
backend/mitra_api/email_reply/: parser.py  routes.py  token_store.py
backend/mitra_api/founder/: company_enricher.py  jd_parser.py  job_builder.py  prompts.py  routes.py
backend/mitra_api/jobs/: admin.py
backend/mitra_api/llm/: __init__.py  factory.py  types.py
backend/mitra_api/llm/adapters/: __init__.py  anthropic_adapter.py  (+2 more)
backend/mitra_api/tools/: ashby.py  cal.py  candidate_offer_context.py  candidates.py  compatibility.py  contradictions.py  email.py  embeddings.py  fit_score.py  intelligence.py  intros.py  linkedin_parser.py  market_research.py  notifications.py  proactive.py  resume_parser.py  salary_benchmark.py  search.py  signal_interpreter.py
backend/mitra_api/twilio_whatsapp/: __init__.py  client.py  list_picker.py  routes.py
backend/mitra_api/whatsapp/: __init__.py  client.py  interactive_native.py  job_cards.py  meta_interactive.py  parse.py  routes.py  split_text.py
(+94 files in other folders)
