[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mitra-api"
version = "0.1.0"
description = "Mitra WhatsApp agent: provider-agnostic LLM + job recommendations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "redis>=5.0.0",
  "asyncpg>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "pgvector>=0.3.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
]

[tool.setuptools.package-data]
mitra_api = ["data/*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mitra_api*"]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"
